--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,13 @@
     <color name="colorAccent">#FF4081</color>
     <color name="color_white">#ffff</color>
     <color name="color_bottom">#d4bcb6b6</color>
+
     <color name="rippleEffectColor">#ed27be22</color>
     <color name="color_signin">#f012cccf</color>
     <color name="color_register">#f3bebcbc</color>
+
+
+    <color name="baseReleaseColor">#212121</color>
+    <color name="basePressColor">#fafafa</color>
+    <color name="ballReleaseColor">#9e9e9e</color>
 </resources>
