--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,55 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WelcomeActivity">
+    >
 
+    <LinearLayout
+        android:layout_margin="8dp"
+        android:id="@+id/layoutPlace"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="10"
+        android:orientation="horizontal">
 
-    <RelativeLayout
+        <EditText
+            android:id="@+id/editPlace"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="8.5" />
+
+        <Button
+            android:id="@+id/btnGo"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1.5"
+            android:text="Go"/>
+
+    </LinearLayout>
+
+    <fragment
+        android:layout_below="@id/layoutPlace"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        tools:context=".WelcomeActivity"/>
 
-       <android.support.v7.widget.CardView
-           android:layout_margin="4dp"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           map:cardElevation="10dp"
-           android:layout_alignParentBottom="true">
+    <android.support.v7.widget.CardView
+        android:layout_margin="4dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        map:cardElevation="10dp"
+        android:layout_alignParentBottom="true">
 
-           <LinearLayout
-               android:gravity="center"
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:padding="16dp"
-               android:weightSum="10"
-               android:orientation="horizontal">
+        <LinearLayout
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="16dp"
+            android:weightSum="10"
+            android:orientation="horizontal">
 
-               <com.github.glomadrian.materialanimatedswitch.MaterialAnimatedSwitch
-                   android:id="@+id/location_switch"
-                   android:layout_width="0dp"
-                   android:layout_height="wrap_content"
-                   android:layout_weight="3"
-                   app:base_release_color="@color/baseReleaseColor"
-                   app:base_press_color="@color/basePressColor"
-                   app:ball_release_color="@color/ballReleaseColor"
-                   app:ball_press_color="@color/color_white"
-                   app:icon_release="@drawable/ic_action_location_off"
-                   app:icon_press="@drawable/ic_action_location_on"
-                   />
+            <com.github.glomadrian.materialanimatedswitch.MaterialAnimatedSwitch
+                android:id="@+id/location_switch"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                app:base_release_color="@color/baseReleaseColor"
+                app:base_press_color="@color/basePressColor"
+                app:ball_release_color="@color/ballReleaseColor"
+                app:ball_press_color="@color/color_white"
+                app:icon_release="@drawable/ic_action_location_off"
+                app:icon_press="@drawable/ic_action_location_on"
+                />
 
-               <Button
-                   android:layout_weight="7"
-                   android:layout_width="0dp"
-                   android:layout_height="wrap_content"
-                   android:text="FIND USER"/>
-           </LinearLayout>
-       </android.support.v7.widget.CardView>
+            <Button
+                android:layout_weight="7"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="FIND USER"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
-    </RelativeLayout>
-</fragment>
+</RelativeLayout>
